# inferbench

./: .gitignore  CLAUDE.md  Makefile  README.md  SKILLS.md  docker-compose.yml  llm_inferbench.ipynb  pyproject.toml  test_percentile.py  test_scheduler_manual.py
benchmarks/: custom_gemma2_c4_short.json  report.md  sdxl_skipped.json  tgi_fp16.json  transformers_gemma2_c1_medium.json  transformers_gemma2_c1_short.json  triton_kernels.json  vllm_awq.json
docker/: Dockerfile.bench  Dockerfile.custom  Dockerfile.gateway  prometheus.yml
prompts/: long.jsonl  medium.jsonl  mixed.jsonl  short.jsonl  test.jsonl
scripts/: run_bench.py  run_bench_diffusion.py  run_kernel_bench.py  smoke_engine.py
src/: config.py
src/backends/: base.py  custom_backend.py  diffusers_backend.py  tgi_backend.py  transformers_backend.py  vllm_backend.py
src/backends/custom/: README.md  engine.py  kv_cache.py  scheduler.py  server.py
src/bench/: metrics.py  profiles.py  report.py  runner.py  runner_diffusion.py
src/gateway/: app.py  dependencies.py  routes.py  schemas.py
src/kernels/: README.md  bench_kernels.py  fused_gelu.py  fused_softmax.py
src/monitoring/: gpu.py  prometheus.py
tests/integration/: test_custom_server.py  test_gateway.py
tests/unit/: test_kv_cache.py  test_metrics.py  test_report.py  test_scheduler.py  test_schemas.py  test_triton_softmax.py
uv-aarch64-apple-darwin/: uvx
