[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inferbench"
version = "0.1.0"
description = "Open-source LLM and image generation inference benchmarking platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "structlog",
    "aiohttp",
    "pynvml",
    "prometheus-client",
    "torch",
    "transformers",
    "accelerate",
    "safetensors",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pyright",
    "httpx",
]
diffusion = [
    "diffusers",
]
kernels = [
    "triton; sys_platform == 'linux'",
]
quantization = [
    "bitsandbytes; sys_platform == 'linux'",
    "auto-gptq; sys_platform == 'linux'",
    "autoawq; sys_platform == 'linux'",
]
all = [
    "inferbench[dev,diffusion,kernels,quantization]",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", ".uv_python", ".uv_cache", ".cache"]

[tool.pyright]
include = ["src", "tests", "scripts"]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"

[tool.hatch.build.targets.wheel]
packages = ["src"]
